# miditui

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md
.github/workflows/: release.yml
agent_notes/: CLAUDE.md  PROMPTS.md  README.md
examples/: README.md  epic_final_boss.mid  spy_thriller_theme.json
src/: app.rs  history.rs  lib.rs  main.rs
src/audio/: engine.rs  export.rs  mod.rs
src/midi/: midi_export.rs  midi_import.rs  mod.rs  note.rs  project.rs  track.rs
src/ui/: combined.rs  dialogs.rs  help.rs  keyboard.rs  mod.rs  piano_roll.rs  project_timeline.rs  timeline.rs  tracks.rs
