[package]
name = "miditui"
version = "0.1.2"
edition = "2021"
description = "An interactive terminal app/UI for MIDI composing, mixing, and playback."
authors = ["Max Woolf"]

[[bin]]
name = "miditui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rodio = "0.19"
rustysynth = "1.3.6"
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.10"
hound = "3.5"
midly = "0.5"
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
